tests/error/unary_times.gw
#! [contains] no match found for operator
var int i;
*i;
